# Telescope

./: .env.example  .gitignore  .gitmodules  .graphqlrc.json  CHANGELOG.md  CODE_OF_CONDUCT.md  Caddyfile  Caddyfile.dev  Cargo.toml  Dockerfile  LICENSE  Pipfile  Procfile  README.md  config.yaml  config_example.toml  diesel.toml  docker-compose.dev.yml  docker-compose.yml  docker-file.yml  docker-run.sh  requirements.txt  rustfmt.toml  telescope-config.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  cargo.yml  docker.yml  publish.yml  test.yml
api/: README.md  __init__.py  db.py  main.py  security.py  utils.py
api/chat_associations/: db.py  router.py  schemas.py
api/db/: __init__.py  enrollments.py  projects.py  semesters.py  users.py
api/enrollments/: db.py  router.py  schemas.py
api/meetings/: db.py  router.py  schemas.py
api/projects/: db.py  router.py  schemas.py
api/routers/: enrollments.py  meetings.py  projects.py  semesters.py  small_groups.py  users.py
api/schemas/: enrollments.py  semesters.py  users.py
api/semesters/: db.py  router.py  schemas.py
api/small_groups/: db.py  router.py  schemas.py
api/users/: db.py  router.py  schemas.py
config/: Caddyfile  telescope-config.toml  wiki.yml
database/: README.md  post.sql  postgrest_example.py  pre.sql  procedures.sql  rcos.sql  views.sql
database/queries/: final_grade.sql
database/schema/: README.md  rcos.dbml
database/views/: total_attendances.sql
db/: schema.sql
db/migrations/: 20210117171055_create_roles.sql  20210117171712_create_types.sql  20210117172640_create_semesters_table.sql  20210117180501_create_announcements_table.sql  20210117180543_create_users_table.sql  20210117180819_create_user_accounts_table.sql  20210117181829_create_workshop_proposals_table.sql  20210117182303_create_projects_table.sql  20210117182855_create_project_pitches_table.sql  20210117183105_create_enrollments_table.sql  20210117183106_create_mentor_proposals_table.sql  20210117183107_create_workshop_proposals_table.sql  20210117183108_create_pay_requests_table.sql  20210117183109_create_project_pitches_table.sql  20210117183357_create_small_groups_table.sql  20210117184040_create_status_update_table.sql  20210117184930_create_meetings_table.sql  20210117185159_create_meeting_attendances_table.sql  20210117185355_create_bonus_attendances_table.sql  20210117185840_create_project_presentation_grades_table.sql  20210117190056_create_chat_associations_table.sql  20210117190201_create_final_grade_appeal_table.sql  20210117190635_create_small_group_members_view.sql  20210117190735_create_public_meetings_view.sql  20210117191043_create_faculty_advisors_view.sql  20210117194733_create_roles.sql  20210122203649_grant_api_user_to_authenticator.sql  20210122222933_simplify_url_domain.sql  20210208222336_add_is_external_project_field.sql  20210208223049_remove_project_languages_field.sql
example_queries/: users_with_enrollments.gql
graphql/: schema.json
graphql/github/: schema.json
graphql/queries/: landing_page_statistics.graphql
graphql/rcos/: enrollments.graphql  schema.json
graphql/stats/: landing_page.graphql
graphql/users/: create_one.graphql  developers.graphql
metadata/: tables.yaml
migrations/: 20210117171055_setup.sql  20210117172640_create_semesters_table.sql  20210117182303_create_projects_table.sql  20210117182615_create_project_presentations_table.sql  20210117183106_create_mentor_proposals_table.sql  20210117183107_create_workshop_proposals_table.sql  20210117183108_create_pay_requests_table.sql  20210117183550_create_small_group_projects_table.sql  20210117183837_create_small_group_mentors_table.sql  20210117184142_create_status_update_submissions_table.sql  20210117185840_create_project_presentation_grades_table.sql  20210117190201_create_final_grade_appeal_table.sql  20210117191050_create_coordinators_view.sql  20210117194733_create_roles.sql  20210209004802_add_external_organizations_table.sql  20210209005151_add_external_org_key_to_projects.sql  convert.rb
migrations/0001_schema/: down.sql  up.sql
migrations/0001_users/: down.sql  up.sql
migrations/0002_emails/: down.sql  up.sql
migrations/0002_users/: down.sql  up.sql
migrations/0003_emails/: down.sql  up.sql
migrations/0005_users/: up.sql
migrations/0010_emails/: up.sql
migrations/1610904400000_create_semesters_table/: down.sql
migrations/1610906701000_create_announcements_table/: down.sql
migrations/1610906899000_create_user_accounts_table/: down.sql
migrations/1610907783000_create_projects_table/: up.sql
migrations/1610908266000_create_mentor_proposals_table/: down.sql  up.sql
migrations/1610908267000_create_workshop_proposals_table/: down.sql
migrations/1610908268000_create_pay_requests_table/: up.sql
migrations/1610908550000_create_small_group_projects_table/: down.sql  up.sql
migrations/1610908717000_create_small_group_mentors_table/: up.sql
migrations/1610908840000_create_status_update_table/: down.sql  up.sql
migrations/1610909370000_create_meetings_table/: down.sql  up.sql
migrations/1610909519000_create_meeting_attendances_table/: down.sql
migrations/1610909635000_create_bonus_attendances_table/: down.sql  up.sql
migrations/1610909920000_create_project_presentation_grades_table/: down.sql
migrations/1610910056000_create_chat_associations_table/: down.sql
migrations/1610912853000_create_roles/: up.sql
postgrest/: example_client.py  postgrest.conf
proposals/: F2020.md  S2020.md  U2020.md  fall-2021.md  fall-2022.md  spring-2021.md  spring-2022.md  summer-2021.md
rcos-data/: .env.example  LICENSE  README.md  docker-compose.yml
sql/: post.sql  rcos.sql  views.sql
src/: app_data.rs  db.rs  db_crud.rs  db_janitor.rs  env.rs  error.rs  main.rs  schema.rs  util.rs
templates/: auth.hbs  calendar.hbs  container.hbs  developers.hbs  element.hbs  graphql_playground.hbs  index.hbs  jumbotron.hbs  landing.hbs  login.hbs  meetings_page.hbs  navbar.hbs  ogp_tags.hbs  page.hbs  profile.hbs  with_alert.hbs
(+588 files in other folders)
