[package]
name = "telescope"
version = "0.3.0"
authors = ["Antonia \"Nia\" Calia-Bogan <acaliabogan@acaliabogan.dev>"]
description = "The RCOS webapp"
edition = "2018"

[dependencies]
# Configuration and env variables
# command line argument parser
structopt = "~0.3"
# environment variable reading through dotenv (.env files)
dotenv = "~0.15"
# config file reading
toml = "~0.5"

# The main web-app framework
# actix actor framework -- system for running server and other tasks.
actix = "~0.10"
# actix web server (use exact version)
actix-web = {version = "~3.3", features = ["rustls"]}
# static file serving
actix-files = "~0.5"
# identity service -- cookie authentication
actix-identity = "~0.3"

# Handlebars for HTML rendering and templating.
# html templating.
handlebars = {version = "~3.5", features = ["dir_source"]}

# exit code standardization
exitcode = "1.1.2"
# logging
log = "~0.4"
env_logger = "~0.8"

# (de)serialization
serde = {version = "1", features = ["derive"]}
serde_json = "1"
serde_urlencoded = "~0.7"

# cryptographically sound random number generation
rand = "~0.8"

# lazily evaluated statics.
lazy_static = "~1.4"

# utilities for dealing with async futures
futures = "0.3"

# Markdown - HTML rendering
pulldown-cmark = "~0.8"

# Sending emails.
lettre = {version = "~0.9", features = ["serde-impls"]}
lettre_email = "~0.9"

# MD5 hashing to use to talk to Gravatar.
md5 = "~0.7"

# Date and time utilities
chrono = {version = "~0.4", features = ["serde", "std", "clock"]}
time = "~0.2"

# Derive traits like Error and Display
derive_more = "~0.99"

# JSON web tokens
jsonwebtoken = "~7.2"

# OAuth2 models and flows
oauth2 = {version = "~3.0", features = ["futures-03", "reqwest-010"]}

# HTTP client alternative to the one that ships with actix-web
reqwest = {version = "0.10", features = ["json"]}

# Fast Concurrent HashMap.
dashmap = "~4.0"

# Async methods in traits
#async-trait = "~0.1"

# GitHub API models and integration
hubcaps = "~0.6"
# Discord API and integration
serenity = "~0.10"

# GraphQL client and queries
graphql_client = "0.9.0"

# Regular expressions
regex = "1"
