[package]
name = "telescope"
version = "0.3.0"
authors = ["Antonia \"Nia\" Calia-Bogan <acaliabogan@acaliabogan.dev>"]
description = "The RCOS webapp"
edition = "2018"

[dependencies]
# command line argument parser
structopt = "~0.3"
# environment variable reading through dotenv (.env files)
dotenv = "~0.15"
# config file reading
toml = "~0.5"

# actix actor framework -- system for running server and other tasks.
actix = "~0.10"
# actix web server
actix-web = {version = "~3.3", features = ["rustls"]}
# static file serving
actix-files = "~0.5"
# identity service -- cookie authentication
actix-identity = "~0.3"

# Handlebars for HTML rendering and templating.
handlebars = {version = "~3.5", features = ["dir_source"]}

# Logging utilities
log = "~0.4"
env_logger = "~0.8"

# (de)serialization
serde = {version = "1", features = ["derive"]}
serde_json = "1"
serde_urlencoded = "~0.7"

# cryptographically sound random number generation
rand = "~0.8"

# lazily evaluated statics.
lazy_static = "~1.4"

# utilities for dealing with async futures
futures = "0.3"

# Sending emails.
lettre = {version = "~0.9", features = ["serde-impls"]}
lettre_email = "~0.9"

# Date and time utilities and formats
chrono = {version = "~0.4", features = ["serde", "std", "clock"]}
time = "~0.2"

# URL formatting
url = {version = "2", features = ["serde"]}

# Derive traits like Error and Display
derive_more = "~0.99"

# JSON web tokens
jsonwebtoken = "~7.2"

# OAuth2 models and flows
oauth2 = {version = "~3.0", features = ["futures-03", "reqwest-010"]}

# HTTP client alternative to the one that ships with actix-web
reqwest = {version = "0.10", features = ["json"]}

# Fast Concurrent HashMap. (this is used for CSRF tokens)
dashmap = "~4.0"

# API stuff
# GitHub API models and integration
hubcaps = "~0.6"
# Discord API and integration
serenity = "~0.10"
# GraphQL client and queries
graphql_client = "0.9.0"

# Regular expressions
regex = "1"

# MD5 hashing
md5 = "0.7"