[package]
name = "telescope"
version = "0.7.3"
authors = ["Antonia \"Nia\" Calia-Bogan <acaliabogan@acaliabogan.dev>"]
description = "The RCOS webapp"
edition = "2018"

[dependencies]
# command line argument parser
structopt = "~0.3"
# environment variable reading through dotenv (.env files)
dotenv = "~0.15"
# config file reading
toml = "~0.5"

# actix actor framework -- system for running server and other tasks.
actix = "0.10.0"
# actix web server
actix-web = {version = "~3.3", features = ["rustls"]}
# static file serving
actix-files = "~0.5"
# identity service -- cookie authentication
actix-identity = "~0.3"

# Handlebars for HTML rendering and templating.
handlebars = {version = "~4.1", features = ["dir_source"]}

# Logging utilities
log = "~0.4"
env_logger = "~0.9"

# (de)serialization
serde = {version = "1", features = ["derive"]}
serde_json = "1"
serde_urlencoded = "~0.7"

# Regular expressions
regex = "1"

# cryptographically sound random number generation
rand = "~0.8"

# lazily evaluated statics.
lazy_static = "~1.4"

# utilities for dealing with async futures
futures = "0.3.17"

# async traits
async-trait = "0.1.51"

# Date and time utilities and formats
chrono = {version = "~0.4", features = ["serde", "std", "clock"]}
chrono-tz = {version = "~0.6", features = ["serde"]}
time = "0.2.27" # Latest version of time crate compatible with actix-identity 0.3.1

# URL formatting
url = {version = "2", features = ["serde"]}

# Derive traits like Error and Display
derive_more = "~0.99"

# JSON web tokens
jsonwebtoken = "~7.2"

# OAuth2 models and flows
oauth2 = "4.1.0"

# HTTP client alternative to the one that ships with actix-web
reqwest = {version = "0.10", features = ["json", "rustls"], default-features = false}

# Fast Concurrent HashMap. (this is used for CSRF tokens)
dashmap = "~4.0"

# CommonMark markdown rendering.
pulldown-cmark = "0.8.0"

# API stuff

# GraphQL client and queries
graphql_client = "0.10.0"

# Discord API and integration
# Serenity for sharding and models
[dependencies.serenity]
version = "0.10.9"
features = [
    # Builder stype methods on Discord's API objects
    "builder",
    # Response caching -- disable this if RAM is an issue.
    "cache",
    # Discord API HTTP Client
    "client",
    # Discord WebSocket geteway events and interactions.
    "gateway",
    # HTTP client
    "http",
    # Discord API Models
    "model",
    # Interactions and Commands API
    "unstable_discord_api",
    # Utility functionality
    "utils",
    # Rustls with tokio 0.2 for compatibility with actix.
    "rustls_tokio_0_2_backend"
]
default-features = false
